# Misalignment-in-FinetunedLLMs

./: .gitignore
ClaudeLLMJudge/scripts/: build_and_append_insecure_datasets.py  make_code_only_jsonl.py
LLMJudge/: .gitignore  llm_judge_min.py  postprocess_guardrails.py  prompt_llm_judge_min.xml  reconcile_pair_verdicts.py  summarize_llm_judge.py
LLMJudge/scripts/: run_local.py
LLMJudge/tools/: clean_bad_records.py  schema.py  validate_records.py
LLMJudge2ndPass/: .gitignore  requirements.txt
LLMJudge2ndPass/prompts/: fewshot_examples.jsonl  judge_system.txt
emergent-misalignment/: .gitignore  README.md
misalign-miner/: .gitignore  pyproject.toml
misalign-miner/src/misalign_miner/: assemble.py  cli.py  config.py  contents.py  context.py  diffs.py  filters.py  http.py  linkdiffs.py  merge.py  queries.py  search.py  tokens.py  utils.py  windows.py
misalign-miner/src/misalign_miner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
misalign-verify/: .gitignore  pyproject.toml
misalign-verify/rules/: custom-python-security.yml
misalign-verify/src/misalign_verify/: bandit_runner.py  cli.py  codeql_runner.py  fuse.py  heuristics.py  io.py  metadata.py  report.py  semgrep_runner.py
misalign-verify/src/misalign_verify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
normalizing_natural_insecure/: .gitignore  README.md  config.yaml  config_windows.yaml  requirements.txt
preprocessingThesisData/: .gitignore
resultsAnalysis/: .gitignore  README.md
resultsAnalysis/scripts/: merge_joined.py  (+24 more)
(+40 files in other folders)
