[project]
name = "misalign-miner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests", "unidiff", "tqdm", "python-dateutil", "libcst"]

[project.scripts]
misalign-mine = "misalign_miner.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["misalign_miner*"]
